Eredményszámláló kijelző alapszerkezet
Létrehoztam a kijelzőnek használt oldalt, aminek megcsináltam a scripteléshez szükséges alapszerkezetét, valamint az átláthatóság kedvéért egy minimális CSS állítás is történt. Ezek mellett hozzáadtam a sárga és piros lapnak használt képeket a mappához.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eredményszámláló</title>
+    <title>Eredményszámláló | Kezdőlap</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -23,9 +23,11 @@
         <label for="halftimeInput">Félidők hossza</label>
         <input type="number" id="halftimeInput">
         
-        <button id="openMatch" type="button">Meccs indítása</button>
+        <button onclick="openMatch()" type="button">Meccs indítása</button>
 
         <p>Created by: Farkas Kornél, Papp Ákos</p>
     </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
