--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
         <div id="teamInputs">
             <div>
             <label for="team1Input">Első csapat neve</label><br>
-            <input type="text" id="team1Input">
+            <input onchange="startValidation()" type="text" id="team1Input">
             </div>
             <div>
             <label for="team2Input">Második csapat neve</label><br>
-            <input type="text" id="team2Input">
+            <input onchange="startValidation()" type="text" id="team2Input">
             </div>
         </div>
 
         <label for="halftimeInput">Félidők hossza</label>
-        <input type="number" id="halftimeInput">
+        <input min="10" max="45" onchange="startValidation()" type="number" id="halftimeInput">
         
-        <button onclick="openMatch()" type="button">Meccs indítása</button>
+        <button disabled onclick="openMatch()" id="openMatch" type="button">Meccs indítása</button>
 
         <p>Created by: Farkas Kornél, Papp Ákos</p>
     </div>
