--- a/kijelzo.html
+++ b/kijelzo.html
@@ -13,7 +13,7 @@
             <p id="t1PointDisplay">0</p>
             <button type="button" onclick="addPoint('t1PointDisplay')">+</button>
             <button type="button" onclick="removePoint('t1PointDisplay')">-</button><br>
-            <button type="button" id="t1CardSelect" class="red" onclick="cycleCard(1)"><img src="./img/redCard.png" alt=""></button>
+            <button type="button" id="t1CardSelect" class="" onclick="cycleCard(1)"><img src="./img/yellowCard.png" alt=""></button>
             <input type="text" name="" id="t1CardName">
             <button type="button" onclick="addCard(1)">+</button>
             <ul id="t1CardList">
