--- a/kijelzo.html
+++ b/kijelzo.html
@@ -11,8 +11,8 @@
         <div>
             <h2 id="t1Title">Csapat 1 neve</h2>
             <p id="t1PointDisplay">0</p>
-            <button type="button" onclick="addPoint('t1PointDisplay')">+</button>
-            <button type="button" onclick="removePoint('t1PointDisplay')">-</button><br>
+            <button type="button" onclick="changePoint(1, 1)">+</button>
+            <button type="button" onclick="changePoint(1, -1)">-</button><br>
             <button type="button" id="t1CardSelect" class="" onclick="cycleCard(1)"><img src="./img/yellowCard.png" alt=""></button>
             <input type="text" name="" id="t1CardName">
             <button type="button" onclick="addCard(1)">+</button>
@@ -34,8 +34,8 @@
         <div>
             <h2 id="t2Title">Csapat 2 neve</h2>
             <p id="t2PointDisplay">0</p>
-            <button type="button" onclick="addPoint('t2PointDisplay')">+</button>
-            <button type="button" onclick="removePoint('t2PointDisplay')">-</button><br>
+            <button type="button" onclick="changePoint(2, 1)">+</button>
+            <button type="button" onclick="changePoint(2, -1)">-</button><br>
             <button type="button" id="t2CardSelect" onclick="cycleCard(2)"><img src="./img/yellowCard.png" alt=""></button>
             <input type="text" name="" id="t2CardName">
             <button type="button" onclick="addCard(2)">+</button>
