Card management simplify
A card management ismét rövidítve és egyszerűsítésre került.

--- a/kijelzo.html
+++ b/kijelzo.html
@@ -14,7 +14,7 @@
             <button type="button" onclick="changePoint(1, 1)">+</button>
             <button type="button" onclick="changePoint(1, -1)">-</button><br>
             <button type="button" id="t1CardSelect" class="" onclick="cycleCard(1)"><img src="./img/yellowCard.png" alt=""></button>
-            <input type="text" name="" id="t1CardName">
+            <input type="text" autocomplete="off" id="t1CardName">
             <button type="button" onclick="addCard(1)">+</button>
             <ul id="t1CardList">
             </ul>
@@ -37,7 +37,7 @@
             <button type="button" onclick="changePoint(2, 1)">+</button>
             <button type="button" onclick="changePoint(2, -1)">-</button><br>
             <button type="button" id="t2CardSelect" onclick="cycleCard(2)"><img src="./img/yellowCard.png" alt=""></button>
-            <input type="text" name="" id="t2CardName">
+            <input type="text" autocomplete="off" id="t2CardName">
             <button type="button" onclick="addCard(2)">+</button>
             <ul id="t2CardList">
                 
