--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         <div id="teamInputs">
             <div>
             <label for="team1Input">Első csapat neve</label><br>
-            <input onchange="startValidation()" type="text" id="team1Input">
+            <input autocomplete="off" onchange="startValidation()" type="text" id="team1Input">
             </div>
             <div>
             <label for="team2Input">Második csapat neve</label><br>
-            <input onchange="startValidation()" type="text" id="team2Input">
+            <input autocomplete="off" onchange="startValidation()" type="text" id="team2Input">
             </div>
         </div>
 
