--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
         <h1>Eredményszámláló</h1>
         <div id="teamInputs">
             <div>
-            <label for="team1Input">Első csapat neve</label><br>
+            <label for="team1Input" class="csapatnev">Első csapat neve</label><br>
             <input autocomplete="off" onchange="startValidation()" type="text" id="team1Input">
             </div>
             <div>
-            <label for="team2Input">Második csapat neve</label><br>
+            <label for="team2Input" class="csapatnev">Második csapat neve</label><br>
             <input autocomplete="off" onchange="startValidation()" type="text" id="team2Input">
             </div>
         </div>
 
-        <label for="halftimeInput">Félidők hossza</label>
+        <label for="halftimeInput" class="felido">Félidők hossza</label>
         <input min="5" max="99" onchange="startValidation()" type="number" id="halftimeInput">
         
         <button disabled onclick="openMatch()" id="openMatch" type="button">Meccs indítása</button>
 
-        <p>Created by: Farkas Kornél, Papp Ákos</p>
+        <footer><p>Created by: Farkas Kornél, Papp Ákos</p></footer>
     </div>
 
     <script src="script.js"></script>
