--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="homeContent">
+    <div id="homeContent" class="flex-container">
         <h1>Eredményszámláló</h1>
         <div id="teamInputs">
             <div>
-            <label for="team1Input" class="csapatnev">Első csapat neve</label><br>
-            <input autocomplete="off" onchange="startValidation()" type="text" id="team1Input">
+                <label for="team1Input" class="csapatnev">Első csapat neve</label><br>
+                <input autocomplete="off" onchange="startValidation()" type="text" id="team1Input" class="mediascreen">
             </div>
             <div>
-            <label for="team2Input" class="csapatnev">Második csapat neve</label><br>
-            <input autocomplete="off" onchange="startValidation()" type="text" id="team2Input">
+                <label for="team2Input" class="csapatnev">Második csapat neve</label><br>
+                <input autocomplete="off" onchange="startValidation()" type="text" id="team2Input" class="mediascreen">
             </div>
         </div>
 
