kijelzo formázás csapatonként

--- a/kijelzo.html
+++ b/kijelzo.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div style="display: flex; gap: 50px">
-        <div>
+        <div class="keret1">
             <h2 id="t1Title">Csapat 1 neve</h2>
             <p id="t1PointDisplay">0</p>
             <button type="button" onclick="changePoint(1, 1)">+</button>
