kijelzore css masodik keret

--- a/kijelzo.html
+++ b/kijelzo.html
@@ -19,17 +19,17 @@
             <ul id="t1CardList">
             </ul>
         </div>
-        <div>
+        <div class="keret2">
             <p id="halfTimeDisplay">1. félidő</p>
             <p id="timeDisplay">00:00</p>
-            <h2>Hosszabbítás</h2>
+            <h2 class="h2">Hosszabbítás</h2>
             <p id="overtimeDisplay">00:00</p>
             <br><br>
             <button type="button" onclick="startMatch()" id="startMatchButton">START</button>
             <button disabled type="button" onclick="stopMatch()" id="stopMatchButton">STOP</button>
             <br><br>
-            <input min="1" type="number" id="overtimeInput"> <label for="overtimeInput">perc</label>
-            <button type="button" id="overtimeButton" onclick="addOvertime()">Hosszabbítás</button>
+            <input min="1" type="number" id="overtimeInput"> <label for="overtimeInput" id="perc">perc</label>
+            <br><button type="button" id="overtimeButton" onclick="addOvertime()">Hosszabbítás</button>
         </div>
         <div class="keret1">
             <h2 id="t2Title">Csapat 2 neve</h2>
